@@ -1,5 +1,5 @@
 [tool.black]
-target_version = ['py36', 'py37', 'py38', 'py39', 'py310']
+target_version = ['py37', 'py38', 'py39', 'py310', 'py311']
 include = '\.pyi?$'
 skip-magic-trailing-comma = true
 preview = true
@@ -15,7 +15,7 @@ exclude = '''
 '''
 
 [tool.mypy]
-python_version = "3.6"
+python_version = "3.7"
 warn_unused_configs = true
 
 [[tool.mypy.overrides]]
