@@ -14,7 +14,6 @@
 
 import qcore
 from qcore.asserts import assert_eq, assert_ne, assert_unordered_list_eq, AssertRaises
-import inspect
 
 
 class NonCython:
@@ -66,49 +65,44 @@ def fun_with_args(a, b, c, d="e", **f):
 
 
 def test_getargspec():
-    empty = inspect.ArgSpec(args=[], varargs=None, keywords=None, defaults=None)
+    empty = qcore.inspection.ArgSpec(
+        args=[], varargs=None, keywords=None, defaults=None
+    )
     assert_eq(empty, qcore.inspection.getargspec(test_get_subclass_tree))
     assert_eq(empty, qcore.inspection.getargspec(qcore.inspection.lazy_stack))
 
-    emptymethod = inspect.ArgSpec(
+    emptymethod = qcore.inspection.ArgSpec(
         args=["self"], varargs=None, keywords=None, defaults=None
     )
     assert_eq(emptymethod, qcore.inspection.getargspec(X.myinstancemethod))
     assert_eq(emptymethod, qcore.inspection.getargspec(X().myinstancemethod))
 
-    emptyclsmethod = inspect.ArgSpec(
+    emptyclsmethod = qcore.inspection.ArgSpec(
         args=["cls"], varargs=None, keywords=None, defaults=None
     )
     assert_eq(emptyclsmethod, qcore.inspection.getargspec(X.myclassmethod))
 
-    spec = inspect.ArgSpec(
+    spec = qcore.inspection.ArgSpec(
         args=["a", "b", "c", "d"], varargs=None, keywords="f", defaults=("e",)
     )
     assert_eq(spec, qcore.inspection.getargspec(fun_with_args))
 
 
-try:
-    exec(
-        """
 def fun_with_annotations(a: int, b: str, *args) -> None:
     pass
 
 
 def fun_with_kwonly_args(a=1, *, b, c=3):
     pass
-"""
-    )
-except SyntaxError:
-    pass
-else:
 
-    def test_getargspec_py3_only():
-        spec = inspect.ArgSpec(
-            args=["a", "b"], varargs="args", keywords=None, defaults=None
-        )
-        assert_eq(spec, qcore.inspection.getargspec(fun_with_annotations))
-        with AssertRaises(ValueError):
-            qcore.inspection.getargspec(fun_with_kwonly_args)
+
+def test_getargspec_py3_only():
+    spec = qcore.inspection.ArgSpec(
+        args=["a", "b"], varargs="args", keywords=None, defaults=None
+    )
+    assert_eq(spec, qcore.inspection.getargspec(fun_with_annotations))
+    with AssertRaises(ValueError):
+        qcore.inspection.getargspec(fun_with_kwonly_args)
 
 
 class X:
