@@ -1,7 +1,7 @@
 [tox]
 minversion=2.3.1
 envlist =
-    py36,py37,py38,py39,py310
+    py37,py38,py39,py310,py311
     mypy
     black
 skip_missing_interpreters = True
@@ -14,7 +14,7 @@ commands =
     pytest qcore
 
 [testenv:mypy]
-basepython = python3.6
+basepython = python3.7
 deps =
     -rrequirements.txt
 
@@ -27,8 +27,8 @@ commands =
 
 [gh-actions]
 python =
-    3.6: py36, mypy
-    3.7: py37
+    3.7: py37, mypy
     3.8: py38
     3.9: py39
-    3.10: py310, black
+    3.10: py310
+    3.11: py311, black
