@@ -1,3 +1,7 @@
+## Unreleased
+
+* Drop support for Python 3.6; add support for Python 3.11
+
 ## 1.8.0
 
 * Add `.fn` attributes to cache functions in `qcore.caching`,
